--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CASH CARD Fuel Calculator — Abang Mie</title>
+  <title>CASH CARD — By Abang Mie</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
     <div class="brand">
       <div class="brand-badge">CASH CARD</div>
       <div>
-        <div class="title">CASH CARD Fuel Calculator</div>
+        <div class="title">CASH CARD CALCULATOR</div>
         <div class="subtitle">Harga rasmi kerajaan — auto update mingguan (fallback manual jika perlu)</div>
       </div>
     </div>
