--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <div class="section">
           <h3>Input</h3>
           <div class="row">
-            <div><label>Jumlah pelanggan (RM)</label><input type="number" step="0.01" id="dieselAmount" /></div>
-            <div><label>Harga subsidi per liter (RM)</label><input type="number" step="0.001" id="dieselSubsidy" value="2.15" /></div>
+            <div><label>Jumlah pelanggan (RM)</label><input type="number" id="dieselAmount" /></div>
+            <div><label>Harga subsidi per liter (RM)</label><input type="number" id="dieselSubsidy" value="2.15" /></div>
           </div>
           <div class="row">
-            <div><label>Harga diesel semasa (RM)</label><input type="number" step="0.001" id="dieselCurrent" value="2.89" /></div>
+            <div><label>Harga diesel semasa (RM)</label><input type="number" id="dieselCurrent" value="2.89" /></div>
           </div>
         </div>
         <div class="section">
@@ -37,9 +37,6 @@
           <div class="row">
             <div class="out"><div class="label">Liter tepat</div><div class="value" id="dieselLitersExact">—</div></div>
             <div class="out"><div class="label">Amaun EDC (RM)</div><div class="value" id="dieselEDC">—</div></div>
-          </div>
-          <div class="row">
-            <div class="out"><div class="label">Beza liter</div><div class="value" id="dieselDiff">—</div></div>
           </div>
         </div>
         <div class="section center-btn">
@@ -53,11 +50,11 @@
         <div class="section">
           <h3>Input</h3>
           <div class="row">
-            <div><label>Jumlah pelanggan (RM)</label><input type="number" step="0.01" id="petrolAmount" /></div>
-            <div><label>Harga subsidi per liter (RM)</label><input type="number" step="0.001" id="petrolSubsidy" value="2.05" /></div>
+            <div><label>Jumlah pelanggan (RM)</label><input type="number" id="petrolAmount" /></div>
+            <div><label>Harga subsidi per liter (RM)</label><input type="number" id="petrolSubsidy" value="2.05" /></div>
           </div>
           <div class="row">
-            <div><label>Harga petrol semasa (RM)</label><input type="number" step="0.001" id="petrolCurrent" value="2.54" /></div>
+            <div><label>Harga petrol semasa (RM)</label><input type="number" id="petrolCurrent" value="2.54" /></div>
           </div>
         </div>
         <div class="section">
@@ -65,9 +62,6 @@
           <div class="row">
             <div class="out"><div class="label">Liter tepat</div><div class="value" id="petrolLitersExact">—</div></div>
             <div class="out"><div class="label">Amaun EDC (RM)</div><div class="value" id="petrolEDC">—</div></div>
-          </div>
-          <div class="row">
-            <div class="out"><div class="label">Beza liter</div><div class="value" id="petrolDiff">—</div></div>
           </div>
         </div>
         <div class="section center-btn">
