--- a/index.html
+++ b/index.html
@@ -74,7 +74,12 @@
       Memuatkan harga rasmi kerajaan...
     </div>
   </main>
+<!-- Footer -->
+  <footer>
+    <div class="footer-text">Creditted to Afifi Ulu Pauh</div>
+  </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
+
